--- a/src/profile.css
+++ b/src/profile.css
@@ -3,7 +3,7 @@
     justify-items: center;
     border-radius: 10px;
     background-color: white;
-    box-shadow: 1px 1px 20px 5px #666;
+    box-shadow: 1px 1px 3px 3px #ccc;
     margin-left: -1px;
     max-width: 800px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
